# xsecana

./: .gitignore  CMakeLists.txt  CrossSection.cxx  CrossSection.h  CrossSectionAnalysis.cxx  CrossSectionAnalysis.h  GNUmakefile  Hist.cxx  Hist.h  ICrossSection.cxx  ICrossSection.h  ICrossSectionAnalysis.cxx  ICrossSectionAnalysis.h  IEfficiency.h  IFlux.h  ISignalEstimator.h  IUncertaintyPropagator.h  IUncertaintyPropogator.h  IUnfold.h  README.md  SimpleEfficiency.cxx  SimpleEfficiency.h  SimpleFlux.cxx  SimpleFlux.h  SimpleQuadSum.h  SimpleSignalEstimator.cxx  SimpleSignalEstimator.h  Systematic.cxx  Systematic.h  Type.h  index.md
CAFAna/: CAFAnaUnfold.cxx  CAFAnaUnfold.h
doc/: ideal_python_interface_bin_optimization.py  ideal_python_interface_cut_optimization.py  ideal_python_interface_my_analysis.py  ideal_python_interface_my_study.py  ideal_python_interface_numucc.py  ideal_python_interface_simple_analysis.py
doc/diagrams/: analysis_flowchart_distributed.py  analysis_flowchart_distributed_optimization.py  analysis_flowchart_ratio.py  analysis_flowchart_simple.py  analysis_uml.py  cross_section_ratio_uml.py  cross_section_uml.py  format_utils.py  make_all_diagrams.py  simple_quad_sum_flowchart.py  systematic_spider.py  systematic_uml.py  template_fit_analysis_flowchart.dot  template_fit_analysis_flowchart.py  template_fit_uncert_flowchart.py
include/XSecAna/: Analysis.h  Array.h  Array2D.h  Array3D.h  CrossSection.h  Hist.h  Hist2D.h  HistProxyish.h  ICrossSection.h  IEfficiency.h  IFlux.h  IMeasurement.h  ISignalEstimator.h  IUncertaintyPropagator.h  IUnfold.h  JointTemplateFitSignalEstimator.h  Math.h  SimpleEfficiency.h  SimpleFlux.h  SimpleQuadSum.h  SimpleQuadSumAsymm.h  SimpleSignalEstimator.h  Systematic.h  TemplateFitSignalEstimator.h  Type.h  Utils.h  _Hist.h
include/XSecAna/CAFAna/: CAFAnaInterface.h  GNUmakefile
include/XSecAna/Fit/: IFitter.h  JointTemplateFitCalculator.h  JointTemplateFitComponent.h  Minuit2TemplateFitter.h  TemplateFitCalculator.h  TemplateFitComponent.h
src/: Array.cpp  CMakeLists.txt  CrossSection.cpp  Hist.cpp  JointTemplateFitSignalEstimator.cpp  SimpleEfficiency.cpp  SimpleFlux.cpp  SimpleSignalEstimator.cpp  Systematic.cpp  TemplateFitSignalEstimator.cpp  _Hist.cpp
src/Fit/: JointTemplateFitCalculator.cpp  JointTemplateFitComponent.cpp  Minuit2TemplateFitter.cpp  TemplateFitCalculator.cpp  TemplateFitComponent.cpp
test/: CMakeLists.txt  GNUmakefile  run_tests.sh  test_compile.cc  test_hist.cc  test_hist_proxy.cc  test_interface.cc  test_simple_analysis.cc  test_simple_efficiency.cc  test_simple_flux.cc  test_simple_quad_sum.cc  test_simple_signal_estimator.cc  test_simple_xsec.cc  test_systematic.cc  test_template_fit_calculator.cc  test_utils.h
